# QT_Trial

./: CMakeLists.txt  README.md  icon.qrc  icon.rc  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
